--- a/cards/emails.html
+++ b/cards/emails.html
@@ -6,6 +6,7 @@
 </md-toolbar>
 
 <md-content>
+    <loading items="$ls.emails['personal']" color="color"></loading>
     <md-list>
         <md-list-item class="md-2-line removeable" ng-repeat="email in $ls.emails['personal'] | orderBy: '-time'" style="position: relative">
             <div class="md-avatar-icon fix-icon" md-colors="::{background: 'blue-grey-400'}" style="min-width: 36px">
