--- a/cards/finals.html
+++ b/cards/finals.html
@@ -6,6 +6,7 @@
 </md-toolbar>
 
 <md-content>
+    <loading items="$ls.finals" color="color"></loading>
     <md-list>
         <md-list-item class="md-2-line" ng-repeat="final in $ls.finals | orderBy: 'date'" ng-click="null">
             <div class="md-list-item-text">
