--- a/cards/grades.html
+++ b/cards/grades.html
@@ -6,6 +6,7 @@
 </md-toolbar>
 
 <md-content>
+    <loading items="$ls.grades" color="color"></loading>
     <md-list>
         <md-list-item class="md-2-line" ng-repeat="grade in $ls.grades | orderBy: '-'" ng-click="null">
             <div class="md-list-item-text" flex>
