Added Reports Page With Six Cards To Download PDF Reports

--- a/includes.html
+++ b/includes.html
@@ -29,6 +29,7 @@
             <script src="/static/js/schedule.js"></script>
             <script src="/static/js/courses.js"></script>
             <script src="/static/js/emails.js"></script>
+            <script src="/static/js/reports.js"></script>
             <script src="/static/js/calendar.js"></script>
             <script src="/static/js/notfound.js"></script>
             <script src="/static/js/account.js"></script>
