Used Loading In More Cards And Fixed Deadlines Sorting

--- a/cards/classes.html
+++ b/cards/classes.html
@@ -6,8 +6,9 @@
 </md-toolbar>
 
 <md-content>
+    {{ classes = todayClasses(); '' }}
+    <loading items="classes" color="color"></loading>
     <md-list>
-        {{ classes = todayClasses(); '' }}
         <md-list-item ng-if="$ls.courses && classes.length == 0">You have no classes today :D</md-list-item>
         <md-list-item ng-repeat="class in classes | orderBy: 'points[0].y'" ng-click="null"
                       md-colors="::{borderColor: class.color}" class="md-2-line today-classes">
