--- a/cards/courses.html
+++ b/cards/courses.html
@@ -6,6 +6,7 @@
 </md-toolbar>
 
 <md-content>
+    <loading items="$ls.terms[term].courses" color="color"></loading>
     <md-list>
         <md-list-item ng-repeat="id in $ls.terms[term].courses" ng-if="id.length < 8" ng-click="goToCourse(id)" class="md-2-line">
             <div class="md-list-item-text">
