--- a/cards/deadlines.html
+++ b/cards/deadlines.html
@@ -6,10 +6,10 @@
 </md-toolbar>
 
 <md-content>
-    <loading items="$ls.deadlines" color="color"></loading>
+    <loading items="$ls.deadlines | filter: inCourse && {course: $ls.selected.course}" color="color"></loading>
     <md-list>
         <md-list-item class="md-2-line" ng-class="beforeDue(deadline.dueDate) ? 'removeable' : 'archived'"
-                      ng-repeat="deadline in $ls.deadlines | filter: inCourse && {course: $ls.selected.course} | orderBy: ['!dueDate', 'dueDate']">
+            ng-repeat="deadline in $ls.deadlines | filter: inCourse && {course: $ls.selected.course} | orderBy: nearest">
             <div class="md-list-item-text" flex>
                 <h3>{{ ::deadline.title }}</h3>
                 <p ng-if="!inCourse">{{ ::$ls.courses[deadline.course].title }}</p>
