--- a/cards/updates.html
+++ b/cards/updates.html
@@ -6,7 +6,7 @@
 </md-toolbar>
 
 <md-content>
-    <loading items="$ls.updates | filter: inCourse && {course: $ls.selected.course}" color="color"></loading>
+    <loading items="$ls.updates" color="color"></loading>
     <md-list>
         <md-list-item class="md-2-line removeable"
                       ng-repeat="update in $ls.updates | filter: inCourse && {course: $ls.selected.course} | orderBy: '-time'">
