--- a/schedule.html
+++ b/schedule.html
@@ -33,7 +33,7 @@
             {{ ::day }} <span class="hide-xs">{{ ::term.dates[$index] }}</span>
         </div>
     </md-card-content>
-</md-card><!--Schedule card end-->
+</md-card>
 
 <script type="text/ng-template" id="class-dialog">
     <md-dialog class="schedule" md-colors="::{background: 'default-grey-A100', color: 'default-grey-800'}" layout="column" flex="40" flex-xs="90">
