--- a/welcome.html
+++ b/welcome.html
@@ -6,7 +6,10 @@
         <div id="welcome-text" layout="column" flex-gt-xs="40" flex-xs="noshrink" flex-order-xs="2" layout-padding>
             <p md-colors="::{color: 'primary'}">By Students‚ For Students</p>
             <span>This will revolutionize your experience with UOS websites and combines all of them in one place (Blackboard‚ MyUDC‚ Email and Academic Calendar)</span>
-            <md-button class="md-raised md-primary" layout-padding login>Get Started</md-button>
+            <md-button class="md-raised md-primary" layout-padding style="margin-bottom: 16px" login>Get Started</md-button>
+            <md-button class="md-raised" md-colors="{background: 'blue-grey-600'}" layout-padding ng-click="startDemo()">
+                Demo (without login)
+            </md-button>
         </div>
         <div layout="column" flex-gt-xs="60" flex-xs="noshrink" flex-order-xs="1">
             <img ng-repeat="(image, icon) in ::pages track by $index" class="fill-width"
