Replaced Grades Card With Holds Card And Made Three Mini Tweaks

--- a/cards/holds.html
+++ b/cards/holds.html
@@ -6,9 +6,8 @@
 </md-toolbar>
 
 <md-content>
-    <loading items="$ls.documents" color="color"></loading>
+    <loading items="$ls.holds" color="color"></loading>
     <md-list>
-        <md-list-item ng-if="$ls.holds">You have no holds. Yay!</md-list-item>
         <md-list-item ng-repeat="hold in $ls.holds" class="md-2-line" ng-click="null">
             <div class="md-list-item-text">
                 <h3>{{ ::hold.reason }}</h3>
