--- a/layout.html
+++ b/layout.html
@@ -56,7 +56,7 @@
                     <div ng-hide="hasToolbar" flex></div>
                     <span ng-show="$ls.session" md-colors="::{color: 'grey-800'}" account>
                         <md-icon md-colors="::{color: 'grey-800'}" md-font-icon="fa fa-user-circle-o"></md-icon>
-                        {{ ::$ls.student.name }}
+                        {{ ::$ls.student.name.split(' ')[0] }}
                     </span>
                     <md-button ng-hide="$ls.session" class="md-primary md-hue-2" login>Login</md-button>
                 </div>
