--- a/account.html
+++ b/account.html
@@ -19,6 +19,11 @@
         <span flex>{{ ::$ls.student.college }}</span>
     </div>
 </div>
-<span layout="row" md-colors="::{background: 'grey-100'}">
+<span layout="row" md-colors="::{background: 'grey-200'}">
     <md-button ng-click="logout()" flex>Logout</md-button>
+</span>
+<span layout="row" md-colors="{background: $ls.student.subscribed ? 'grey-600' : 'green-500'}">
+    <md-button ng-click="subscribe($ls.student.subscribed)" flex>
+        {{$ls.student.subscribed ? 'Unsubscribe from' : 'Subscribe to'}} grades checker
+    </md-button>
 </span>
