Comment Out Subscribe Button & Method And Obtain Sid Locally

--- a/account.html
+++ b/account.html
@@ -22,8 +22,8 @@
 <span layout="row" md-colors="::{background: 'grey-200'}">
     <md-button ng-click="logout()" flex>Logout</md-button>
 </span>
-<span layout="row" md-colors="{background: $ls.student.subscribed ? 'grey-600' : 'green-500'}">
+<!-- <span layout="row" md-colors="{background: $ls.student.subscribed ? 'grey-600' : 'green-500'}">
     <md-button ng-click="subscribe($ls.student.subscribed)" flex>
         {{$ls.student.subscribed ? 'Unsubscribe from' : 'Subscribe to'}} grades checker
     </md-button>
-</span>
+</span> -->
