--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
         </md-toolbar>
         <md-dialog-content layout-margin>
             <p ng-if="error" md-colors="{color: 'red'}" layout-padding>
-                Oops! something went wrong, try again.
+                Oops! something went wrong‚ try again.
             </p>
             <br ng-hide="error">
             <div layout-margin layout="column">
