Fix Classes & Courses Cards And Update Today's Classes On Load

--- a/cards/classes.html
+++ b/cards/classes.html
@@ -6,11 +6,9 @@
 </md-toolbar>
 
 <md-content>
-    {{ classes = todayClasses(); '' }}
-    <loading items="classes" color="color"></loading>
+    <loading items="$ls.classes" color="color"></loading>
     <md-list>
-        <md-list-item ng-if="$ls.courses && classes.length == 0">You have no classes today :D</md-list-item>
-        <md-list-item ng-repeat="class in classes | orderBy: 'points[0].y'" ng-click="null"
+        <md-list-item ng-repeat="class in $ls.classes | orderBy: 'points[0].y'" ng-click="null"
                       md-colors="::{borderColor: class.color}" class="md-2-line today-classes">
             <div class="md-list-item-text">
                 <h3>{{ ::class.start }}</h3>
