Updated Feedback API Call And Commented Out Emails Related Code

--- a/emails.html
+++ b/emails.html
@@ -1,9 +1,9 @@
 <script type="text/ng-template" id="emails">
-    <md-button class="md-accent md-hue-2 no-margin" ng-click="$ls.emails.action = 'write'">Write a new Email</md-button>
+    <!-- <md-button class="md-accent md-hue-2 no-margin" ng-click="$ls.emails.action = 'write'">Write a new Email</md-button> -->
 </script>
 
 <div layout="row" flex>
-    <md-card ng-if="$media('gt-xs') || $ls.emails.action == 'select'" flex-gt-xs="33" flex>
+    <!-- <md-card ng-if="$media('gt-xs') || $ls.emails.action == 'select'" flex-gt-xs="33" flex>
         <md-content layout="row" flex>
             <md-tabs md-selected="$ls.selected.tab" flex>
                 <md-tab ng-repeat="tab in ::tabs" ng-click="getEmails(tab)">
@@ -102,5 +102,8 @@
                 </div>
             </md-card-content>
         </md-content>
-    </md-card>
+    </md-card> -->
+    <h2 style="text-align: center; margin-top: 100px" flex>
+        Emails external access was blocked, we're looking for a solution. Stay tuned!
+    </h2>
 </div>
