Rearrange Dashboard Cards & Update AngularJS Version To v1.7.6

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,4 +14,4 @@
     <md-card layout="column" flex-gt-xs="33" ng-include="$media('gt-xs') ? cards[1].url() : $ls.selected.dashboardCard.url()" card></md-card>
 </div>
 
-<navbar cards="::cards" select="dashboardCard" default="finals" ng-if="$media('xs')"></navbar>
+<navbar cards="::cards" select="dashboardCard" default="classes" ng-if="$media('xs')"></navbar>
